feat: build command

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "license": "MIT",
     "scripts": {
         "dev": "ts-node-dev -r tsconfig-paths/register -r dotenv/config --respawn --transpile-only --ignore-watch node_modules --no-notify --poll src/server.ts",
-        "start": "cross-env NODE_ENV=production node -r ./tsconfig-paths-bootstrap.js dist/index.js",
+        "start": "cross-env NODE_ENV=production node dist/server.js",
+        "build": "tsc",
         "test": "jest",
         "test:dev": "jest --watch",
         "testWithCoverage": "jest --coverage",
